<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/themes_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:key="notification_switch"
            app:title="@string/notification_switch_title"
            app:summaryOff="@string/notification_switch_summary_off"
            app:summaryOn="@string/notification_switch_summary_on"/>

        <ListPreference
            app:defaultValue="time_of_task"
            app:entries="@array/notification_offsets_entries"
            app:entryValues="@array/notification_offsets_values"
            app:key="notification_offsets"
            app:title="@string/notification_offsets_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>