<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/settings_item"
        android:orderInCategory="0"
        android:title="@string/settings_item"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/switch_layout_item"
        android:orderInCategory="1"
        android:title="@string/switch_layout_item"
        android:visible="false"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/monthly_layout_item"
                android:orderInCategory="0"
                android:title="@string/monthly_layout_item"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/weekly_layout_item"
                android:orderInCategory="1"
                android:title="@string/weekly_layout_item"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/todo_list_item"
                android:orderInCategory="2"
                android:title="@string/todo_list_item"
                android:visible="true"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/search_item"
        android:orderInCategory="2"
        android:title="@string/search_item"
        android:icon="@drawable/ic_search_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:targetApi="o"/>
    <item
        android:id="@+id/delete_item"
        android:orderInCategory="3"
        android:title="@string/delete_item"
        android:icon="@drawable/ic_delete_white_24"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/clear_selection_item"
        android:orderInCategory="4"
        android:title="@string/clear_selection_item"
        android:icon="@drawable/ic_clear_white_24"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/filter_item"
        android:orderInCategory="5"
        android:title="@string/filter_item"
        android:icon="@drawable/ic_filter_list_white_24"
        android:visible="false"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_due_date_item"
                android:orderInCategory="0"
                android:title="@string/sort_due_date_item"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sort_priority_item"
                android:orderInCategory="1"
                android:title="@string/sort_priority_item"
                android:visible="true"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>